@@ -1,3 +1,8 @@
+2013-12-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-signature.el (mime-edit-default-signature): Check
+	mail-signature contains separator.
+
 2013-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-view.el (mime-view-multipart/related-show-all-children):
